--- a/app/myart/index.html
+++ b/app/myart/index.html
@@ -35,7 +35,10 @@
         <div class="col-12 row jc-center">
           <img src="../../assets/myart/boy.jpg" alt="boy" id="img-boy" />
         </div>
-        <p class="col-12 txt-justify" style="font-weight: lighter; margin-bottom: 100px;">
+        <p
+          class="col-12 txt-justify"
+          style="font-weight: lighter; margin-bottom: 100px"
+        >
           Just me, myself and I, exploring the universe of unknownment. I have a
           heart of love and an interest of lorem ipsum and mauris neque quam
           blog. I want to share my world with you. Praesent tincidunt sed tellus
@@ -65,7 +68,13 @@
       </div>
     </section>
     <footer>
-        <p class="txt-center">Inspired by <a href="https://www.w3schools.com/w3css/tryw3css_templates_streetart.htm">w3.css</a></p>
+      <p class="txt-center">
+        Inspired by
+        <a
+          href="https://www.w3schools.com/w3css/tryw3css_templates_streetart.htm"
+          >w3.css</a
+        >
+      </p>
     </footer>
   </body>
 </html>
