added development login form

--- a/index.html
+++ b/index.html
@@ -12,12 +12,19 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/index/style.css" />
+    <style>
+      body {
+        background-image: url("../../../../../../Downloads/Animated\ Shape.svg") !important;
+        background-size: cover;
+      }
+    </style>
+    <link rel="stylesheet" href="./css/main/style.css" />
     <title>vicwell28</title>
+    
   </head>
   <body>
     <div class="container row" id="container">
-      <div class="column col-fis flex-container-column">
+      <div class="column col-4 flex-container-column">
         <h2>Login</h2>
 
         <div>
@@ -80,6 +87,6 @@
       </div>
     </div>
 
-    <script src="./script/index/script.js"></script>
+    <script src="./script/main/script.js"></script>
   </body>
 </html>
