food page development update

--- a/app/band/index.html
+++ b/app/band/index.html
@@ -73,18 +73,54 @@
       </div>
     </div>
 
-    <nav class="row">
+    <!-- <nav class="row">
       <div class="row col-10 ai-start">
         <a href="#Home">Home</a>
         <a href="#Band">Band</a>
         <a href="#Tour">Tour</a>
         <a href="#Contact">Contact</a>
-        <a href="#More">More</a>
+        <div class="dropdown col-3">More
+          <div class="dropdown-content">
+            <a href="#Hola">Hola hola</a>
+            <a href="#Hola">Hola hola</a>
+            <a href="#Hola">Hola hola</a>
+            <a href="#Hola">Hola hola</a>
+          </div>
+        </div>
       </div>
       <div class="row col-2 jc-end">
         <a href="#More">More</a>
       </div>
+    </nav> -->
+
+    <nav class="row">
+      <div class="row col-10 jc-start ai-center">
+        <ul class="nav-bar row">
+          <li><a href="#Hola">Hola</a></li>
+          <li><a href="#Hola">Hola</a></li>
+          <li><a href="#Hola">Hola</a></li>
+          <li><a href="#Hola">Hola</a></li>
+          <li class="dropdown">
+            <a>Menu</a>
+            <ul class="dropdown-content">
+              <li><a href="#Hola">HolaHolaHolaHolaHolaHolaHolaHolaHolaHolaHolaHolaHolaHolaHolaHolaHolaHola-</a></li>
+              <li><a href="#Hola">Hola</a></li>
+              <li><a href="#Hola">Hola</a></li>
+              <li><a href="#Hola">Hola</a></li>
+              <li><a href="#Hola">Hola</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+      <div class="row col-2 jc-end ai-center">
+        <ul class="nav-bar row">
+          <li><a href="#Hola">Hola</a></li>
+        </ul>
+      </div>
     </nav>
+
+
+
     <section>
       <div>
         <div class="img-coll">
