--- a/app/how-to-do/index.html
+++ b/app/how-to-do/index.html
@@ -6,65 +6,84 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>How to do</title>
 
+    <!-- icons -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
+    <!-- font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap"
+      rel="stylesheet"
+    />
     <style>
-      body {
-        padding: 50px;
+      * {
+        font-family: "Montserrat", sans-serif;
       }
 
       .input-box {
-        position: relative;
-        width: 300px;
-        padding: 20px;
-        border-radius: 10px;
+        display: flex;
+        height: 40px;
         border: 1px solid black;
+        border-radius: 10px;
       }
 
-      .input-box input {
-        position: absolute;
+      .input-box .input-box-body {
+        position: relative;
         width: 100%;
         height: 100%;
-        top: 0;
-        left: 0;
-        background-color: transparent;
       }
 
-      .input-box span {
+      .input-box .input-box-img {
+        display: flex;
+        align-items: center;
+      }
+
+      .input-box .input-box-body label {
         position: absolute;
         top: 50%;
-        left: 20px;
-        transform: translateY(-50%);
-        transition: all 0.3s;
         background-color: white;
+        transform: translateY(-50%);
+        transition: all 0.2s;
+        opacity: 0.5;
+        font-size: 95%;
       }
 
+      .input-box .input-box-body input {
+        border: none;
+        position: absolute;
+        height: 92%;
+        top: 50%;
+        transform: translateY(-50%);
+        width: 99%;
+      }
 
-      
-
-      input:focus {
+      .input-box .input-box-body input:focus {
         outline: none !important;
       }
 
-      input:focus + span {
-        top: 0;
-        left: 15px;
-        z-index: 2;
-      }
-
-      input:active + span {
-        background-color: black;
-      }
-
-
-     
-      input[type="text"] {
-        border: none !important;
+      .input-box .input-box-body input:focus + label,
+      .input-box .input-box-body input:not(:placeholder-shown) + label {
+        transform: translateY(-152%);
+        opacity: 1;
       }
     </style>
   </head>
   <body>
-    <div class="input-box">
-      <input type="text" value="" />
-      <span>Nombre</span>
+    <div class="container">
+      <div class="input-box">
+        <span class="input-box-img material-symbols-outlined"> person </span>
+        <div class="input-box-body">
+          <input type="text" name="name" id="name" placeholder=" " />
+          <label for="name">Name</label>
+        </div>
+      </div>
     </div>
+
+
+    table>(tr>td*3)*2
+    ul>li*3>span.hello$ -->
   </body>
 </html>
