fashion page development added

--- a/app/how-to-do/index.html
+++ b/app/how-to-do/index.html
@@ -83,7 +83,7 @@
     </div>
 
 
-    table>(tr>td*3)*2
-    ul>li*3>span.hello$ -->
+    <!-- table>(tr>td*3)*2
+    ul>li*3>span.hello$ --> -->
   </body>
 </html>
