--- a/app/fashion-blog/index.html
+++ b/app/fashion-blog/index.html
@@ -9,6 +9,7 @@
     <title>Fashion Blgo</title>
     <!-- link -->
     <link rel="stylesheet" href="../../css/fashion-blog/style.css" />
+    <link rel="stylesheet" href="../../css/fashion-blog/style-fooder.css" />
     <link rel="stylesheet" href="../../css/fashion-blog/style-aside.css" />
     <link rel="stylesheet" href="../../css/fashion-blog/style-blog.css" />
     <link rel="stylesheet" href="../../css/fashion-blog/style-flex.css" />
@@ -31,8 +32,8 @@
   <body>
     <!-- nav -->
     <nav id="nav">
-      <div class="row jc-between">
-        <div class="col-8 row jc-start" style="padding: 5px; gap: 20px">
+      <div>
+        <div style="padding: 5px; gap: 20px">
           <span class="material-symbols-outlined"> home </span>
           <span class="material-symbols-outlined"> home </span>
           <span class="material-symbols-outlined"> home </span>
@@ -40,7 +41,7 @@
           <span class="material-symbols-outlined"> home </span>
           <span class="material-symbols-outlined"> home </span>
         </div>
-        <div class="col-4 row jc-end" style="padding: 5px; gap: 20px">
+        <div style="padding: 5px; gap: 20px">
           <span class="material-symbols-outlined"> home </span>
         </div>
       </div>
@@ -114,8 +115,8 @@
           </footer>
         </div>
         <!-- end card-blog -->
-         <!-- card-blog -->
-         <div class="card-blog row">
+        <!-- card-blog -->
+        <div class="card-blog row">
           <p class="card-blog-title col-12">TITLE HEADING</p>
           <p class="card-blog-desc col-12">
             Title description, <span> May 2, 2016 </span>
@@ -161,8 +162,8 @@
           </footer>
         </div>
         <!-- end card-blog -->
-         <!-- card-blog -->
-         <div class="card-blog row">
+        <!-- card-blog -->
+        <div class="card-blog row">
           <p class="card-blog-title col-12">TITLE HEADING</p>
           <p class="card-blog-desc col-12">
             Title description, <span> May 2, 2016 </span>
@@ -364,6 +365,7 @@
                 name="email"
                 id="email"
                 placeholder="Enter e-mail"
+                required
               />
               <input type="submit" value="Subscribe" />
             </form>
