architects page updated@ @

--- a/app/architects/index.html
+++ b/app/architects/index.html
@@ -37,7 +37,7 @@
 
     <!-- first section  -->
     <section>
-      <div id="container-img">
+      <div id="container-img" style="height: 800px;">
         <div id="container-text">
           <h2 class="logo-mx" style="color: white; font-size: 250%">
             <span><strong>MX</strong></span
@@ -53,7 +53,7 @@
     </section>
 
     <!-- section projects -->
-    <section id="projects">
+    <section id="projects" style="background-color: white;">
       <div class="row">
         <h3 class="col-12" style="font-size: 150%">Projects</h3>
         <hr class="col-12" />
@@ -94,7 +94,7 @@
     </section>
 
     <!-- section about -->
-    <section id="about">
+    <section id="about" style="background-color: white;">
       <div class="row">
         <h2 class="col-12">About</h2>
         <hr class="col-12" />
@@ -157,7 +157,7 @@
     </section>
 
     <!-- section contatct -->
-    <section id="contact">
+    <section id="contact" style="background-color: white;">
       <div class="row">
         <h2 class="col-12">Contact</h2>
         <hr class="col-12" />
@@ -201,8 +201,11 @@
         </div>
 
         <img src="../../assets/architects/map.jpg" alt="" class="col-12" />
+
       </div>
     </section>
+
+
 
     <!-- footer  -->
 
