slide nav added

--- a/index.html
+++ b/index.html
@@ -88,5 +88,8 @@
     </div>
 
     <script src="./script/main/script.js"></script>
+    <script>
+      console.log(this)
+    </script>
   </body>
 </html>
