--- a/app/catering/index.html
+++ b/app/catering/index.html
@@ -45,7 +45,7 @@
       <!-- about  -->
       <section id="about">
         <div class="row">
-          <div class="col-6">
+          <div class="col-6 about-img">
             <img
               src="../../assets/catering/tablesetting2.jpg"
               alt="tablesetting2"
