index bochito uptaded

--- a/app/bochito-oro/index.html
+++ b/app/bochito-oro/index.html
@@ -56,7 +56,12 @@
       <div class="menu">
         <div class="profile">
           <div class="profile-menu">
-f
+            <div class="card-prfile">
+              <a href="#">Profile</a>
+            </div>
+            <div class="card-prfile">
+              <a href="#">Salir</a>
+            </div>
           </div>
         </div>
       </div>
@@ -126,7 +131,6 @@ f
               <th>Estatus</th>
               <th>Acciones</th>
             </tr>
-           
           </table>
         </div>
         <div class="main-table-tools">
