auth login bochito updated

--- a/app/bochito-oro/index.html
+++ b/app/bochito-oro/index.html
@@ -13,7 +13,6 @@
     />
     <link rel="stylesheet" href="../../css/bocho-oro/style-nav.css" />
     <style>
-      
       * {
         box-sizing: border-box;
         padding: 0;
@@ -117,7 +116,7 @@
       <section id="main">
         <div class="main-title">Automoviles</div>
         <div class="main-tools">
-          <input   type="text" name="name" id="filterArray" />
+          <input type="text" name="name" id="filterArray" />
           <input type="button" value="Recargar" />
           <input id="agregar" type="button" value="Agregar" />
         </div>
@@ -151,54 +150,88 @@
     </main>
     <footer></footer>
 
-    <div class="dialog-add" style="display: none;">
+    <div class="dialog-add" style="display: none">
       <div class="form">
-
         <form action="#" method="post">
           <div class="form-action-button">
             <p>Agregar Vehiuclo</p>
             <button id="close-form">X</button>
           </div>
-          
 
           <div class="input-box">
             <div class="input-box-body">
-              <input type="text" name="Marca" id="Marca" placeholder=" " required/>
+              <input
+                type="text"
+                name="Marca"
+                id="Marca"
+                placeholder=" "
+                required
+              />
               <label for="Marca">Marca</label>
             </div>
           </div>
 
           <div class="input-box">
             <div class="input-box-body">
-              <input type="text" name="Modelo" id="Modelo" placeholder=" " required/>
+              <input
+                type="text"
+                name="Modelo"
+                id="Modelo"
+                placeholder=" "
+                required
+              />
               <label for="Modelo">Modelo</label>
             </div>
           </div>
 
           <div class="input-box">
             <div class="input-box-body">
-              <input type="text" name="Precio" id="Precio" placeholder=" " required/>
+              <input
+                type="text"
+                name="Precio"
+                id="Precio"
+                placeholder=" "
+                required
+              />
               <label for="Precio">Precio</label>
             </div>
           </div>
 
           <div class="input-box">
             <div class="input-box-body">
-              <input type="text" name="Sucursal" id="Sucursal" placeholder=" " required/>
+              <input
+                type="text"
+                name="Sucursal"
+                id="Sucursal"
+                placeholder=" "
+                required
+              />
               <label for="Sucursal">Sucursal</label>
             </div>
           </div>
 
           <div class="input-box">
             <div class="input-box-body">
-              <input type="text" name="Lote" id="Lote" placeholder=" " required/>
+              <input
+                type="text"
+                name="Lote"
+                id="Lote"
+                placeholder=" "
+                required
+              />
               <label for="Lote">Lote</label>
             </div>
           </div>
 
           <div class="input-box">
             <div class="input-box-body">
-              <input type="text" name="Estatus" id="Estatus" placeholder=" " required/>
+              <input
+                type="text"
+                name="Estatus"
+                id="Estatus"
+                placeholder=" "
+                required
+              />
               <label for="Estatus">Estatus</label>
             </div>
           </div>
